# QuickShot

./: .gitignore  .lazy.lua  CMakeLists.txt  README.md  flake.nix
.github/workflows/: build-release.yml
include/quickshot/: batch_save_dialog.hpp  canvas_view.hpp  drag_controller.hpp  drag_state.hpp  ellipse.hpp  image_document.hpp  image_scene.hpp  main_window.hpp  qdrawwidget.hpp  rectangle.hpp  roi_exporter.hpp  shape.hpp  shape_item.hpp  size_handle.hpp
include/quickshot/commands/: shape_commands.hpp
include/quickshot/shapes/: bezier_curve.hpp  box_shape.hpp  circle.hpp  ellipse.hpp  multi_point_shape.hpp  polygon.hpp  rectangle.hpp  rectangular_shape.hpp  shape.hpp  shape_handle.hpp  size_handle.hpp
nix/: package.nix
scripts/: generate-compile-commands  run-clang-tidy
src/: batch_save_dialog.cpp  canvas_view.cpp  drag_controller.cpp  drag_state.cpp  ellipse.cpp  image_document.cpp  image_scene.cpp  main.cpp  main_window.cpp  qdrawwidget.cpp  rectangle.cpp  roi_exporter.cpp  shape.cpp  shape_commands.cpp  shape_item.cpp  size_handle.cpp
src/commands/: shape_commands.cpp
src/shapes/: bezier_curve.cpp  box_shape.cpp  circle.cpp  ellipse.cpp  multi_point_shape.cpp  polygon.cpp  rectangle.cpp  rectangular_shape.cpp  shape.cpp  shape_handle.cpp  size_handle.cpp
tests/: drag_controller_test.cpp  drag_state_test.cpp  graphics_scene_test.cpp  main_window_test.cpp  shape_test.cpp
